resources/styles/app.css
/* ... */
@media (max-width: 768px) {
  .header .search {
    margin: 0;
  }

  .header .search-input {
    display: none;
  }

  .header .search img {
    margin: 0;
  }
}

.header .search img {
  position: absolute;
  right: 10px;
  margin: 0 !important;
}

.header .search img.clear-btn {
  display: none;
  height: 1.1rem;
  left: auto;
  right: 3rem;
}

@media (max-width: 768px) {
  .header .search {
    right: -1;
  }
  .header .search img {
    margin: 0;
  }
}

/* Header Mobile*/
@media (max-width: 768px) {
  .header {
    display: flex;
    align-items: center;
    justify-content: center;
  }
}

.header img {
  margin: 0 1rem;
}
.header img:last-child {
  margin-left: 0;
}

@media (max-width: 768px) {
  .header img {
    margin: 0 1rem;
  }
}

/* Hero */
.hero {
  position: relative;
}

@media (max-width: 768px) {
  .hero {
    margin-top: 3.5rem;
  }
}

.hero img {
  width: 100%;
}

@media (max-width: 768px) {
  .hero img {
    width: 100%;
    height: 70vw;
    object-fit: cover;
    object-position: left;
  }
}

.hero .hero-text {
  font-size: 2.313rem;
  font-weight: 100;
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  background-color: rgba(255, 255, 255, 0.88);
  text-align: center;
  width: max-content;
  padding: 2.5rem 5rem;
}

@media (max-width: 768px) {
  .hero .hero-text {
    font-size: 1.2rem;
    padding: 1rem 1.5rem;
    width: 75%;
  }
}

.hero .hero-text .search {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  margin: 2rem 3rem 0.5rem 3rem;
}

@media (max-width: 768px) {
  .hero .hero-text .search {
    margin: 0.7rem;
  }
}

.hero .hero-text .search .search-input {
  border: 1.5px solid var(--brown-grey);
  border-radius: 4px;
  width: 28rem;
  padding: 0.5rem 2rem;
  background-color: hsla(0, 0%, 0%, 0); /* transparent background */
  height: 1.4rem;
  font-size: 1.25rem;
  font-weight: lighter;
  text-indent: 1rem;
}

.hero .hero-text .search .search-input::placeholder {
  font-size: 1rem;
}

@media (max-width: 768px) {
  .hero .hero-text .search .search {
    margin: 0;
  }

  .hero .hero-text .search .search-input {
    font-size: 1.1rem;
  }
}

.hero .search img {
  width: min-content;
  height: 1.5rem;
  left: 1rem;
  position: absolute;
}

.hero .search img.clear-btn {
  display: none;
  left: initial;
  right: 0.65rem;
  height: 1.1rem;
}

/* Restaurants Section */

.homepage-restaurants {
  margin-top: 10rem;
}

@media (max-width: 768px) {
  .homepage-restaurants {
    margin-top: 4rem;
  }
  .homepage-restaurants h2 {
    font-size: medium;
  }
}

.homepage-restaurants .container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: right;
  width: min-content;
  margin: auto;
}
@media (max-width: 768px) {
  .homepage-restaurants .container {
    width: initial;
  }
}
.restaurants-list {
  list-style: none;
  display: flex;
  flex-direction: row;
  justify-content: center;
  padding: 0;
}

@media (max-width: 768px) {
  .restaurants-list {
    overflow-x: scroll;
    padding: 0;
    justify-content: initial;
  }
}

.restaurant-card {
  background-color: var(--beige);
  text-align: center;
  margin: 0.4rem;
}

.restaurant-card img {
  height: 14rem;
  width: 19rem;
}

@media (max-width: 768px) {
  .restaurant-card img {
    /* height: 10rem;
    width: 12.5rem;
    object-fit: cover; */
    height: 14rem;
    width: 12.5rem;
    object-fit: cover;
  }

  .restaurant-card .restaurant-card-content {
    margin: 2rem 0;
  }
}

.restaurant-card h1 {
  font-size: 1.75rem;
  margin: 0.5rem 0;
  margin-top: 1rem;
  font-weight: 300;
}

.restaurant-card p {
  font-size: 1.25rem;
  margin: 0 0 1rem 0;
}

.all-restaurants {
  float: right;
  font-size: 1.5rem;
  color: var(--black);
  text-decoration: none;
  font-weight: 300;
}
.all-restaurants img {
  height: 0.9rem;
}

@media (max-width: 768px) {
  .all-restaurants {
    display: none;
  }
}

/* Dishes Section */

.dishes {
  margin-top: 5rem;
}

@media (max-width: 768px) {
  .dishes {
    margin-top: 2rem;
  }
  .dishes h2 {
    font-size: medium;
  }
}

.dishes-list {
  list-style: none;
  display: flex;
  flex-direction: row;
  justify-content: center;
  padding: 0;
}

@media (max-width: 768px) {
  .dishes-list {
    overflow-x: scroll;
    padding: 0;
    justify-content: initial;
  }
}

.dishes-list li {
  margin: 0 0.3rem;
}

@media (max-width: 768px) {
  .dishes-list li {
    margin: 0 0.4rem;
  }
}

.dishes-list li h2 {
  font-weight: 300;
}

.dish-card-content {
  background-color: var(--beige);
  text-align: center;
  height: 30rem;
  width: 19rem;
  position: relative;
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: repeat(2, 0.5fr) 2fr repeat(2, 0.5fr);
  grid-column-gap: 0px;
  grid-row-gap: 0px;
}

.dish-card-content .dish-cover-image {
  grid-area: 1 / 1 / 2 / 2;
  width: 19rem;
}

@media (max-width: 768px) {
  .dish-card-content {
    width: 16rem;
  }

  .dish-card-content .dish-cover-image {
    height: 14rem;
    width: 16rem;
    object-fit: cover;
  }
}

.dish-card-content h1 {
  grid-area: 2 / 1 / 3 / 2;
  font-weight: 300;
}

.dish-card-content p {
  grid-area: 3 / 1 / 4 / 2;
  padding: 0 1rem;
}

.dish-card-content .types {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 0;
}

.dish-card-content .dish-info-icon {
  grid-area: 4 / 1 / 5 / 2;
  margin-right: 1.5rem;
}

.dish-card-content .dish-info-icon:last-child {
  margin-right: 0;
}

.dish-card-content .price {
  grid-area: 5 / 1 / 6 / 2;
}

.dish-card p {
  font-size: 1.2rem;
  margin: 0;
}

@media (max-width: 768px) {
  .dish-card p {
    font-size: 1rem;
  }
}

.all-dishes {
  float: right;
  margin-right: 3rem;
  font-size: 1.5rem;
  color: var(--black);
  text-decoration: none;
}

.dish-info-icon {
  margin: 2rem 0;
}

/* price with lines */
.price {
  overflow: hidden;
  text-align: center;
  margin: 0 1rem;
  padding-bottom: 2.5rem;
}
/* ... */

